Final Leaflet Lab Submission - Fixed sequence control button clipping

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ a {
 /*Sequence Control Formatting*/
 .sequence-control-container {
     width: 300px;
-    height: 80px;
+    height: 90px;
     background-color: rgba(22,26,29,0.9);
     padding: 8px 10px;
     line-height: 1;
